@@ -1,3 +1,9 @@
+2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add rules for Libtool and recursive documentation generation.
+	* doc-recursive.mk: New.
+	* libtool.mk: New.
+
 2009-10-19  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Remove useless code.
